<resources>
    <string name="app_name">Figma Hearme</string>
    <string name="get_started">Get Started</string>
    <string name="imagemain">imagemain</string>
    <string name="listen_to_the_best">Listen to the best</string>
    <string name="music_everyday">music everyday</string>
    <string name="with">with</string>
    <string name="hearme">Hearme</string>
    <string name="now">now!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_password">Sign up with password</string>
    <string name="imageauthorization">imageauthorization</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="or">Or</string>


</resources>