<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".authorization">

    <ImageView
        android:id="@+id/imageAuthorization"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:background="@drawable/imageauthorization"
        android:contentDescription="@string/imageauthorization"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/letsYouInTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_you_in"
        android:textSize="44sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAuthorization" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueWithFacebookBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_sign_in"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letsYouInTxt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueWithGoogleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_sign_in"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueWithFacebookBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueWithAppleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_sign_in"
        android:text="@string/continue_with_apple"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueWithGoogleBtn" />

    <TextView
        android:id="@+id/orTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/getStartedBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueWithAppleBtn" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getStartedBtn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/button_get_started"
        android:text="@string/sign_up_with_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/signUpLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/doNotHaveAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginEnd="10sp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hearMeBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/green" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>