<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageMainId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/imagemain"
        app:layout_constraintBottom_toTopOf="@+id/listenToTheBestTxtId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/imagemain" />

    <TextView
        android:id="@+id/listenToTheBestTxtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/listen_to_the_best"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/musicEverydayTxtId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/musicEverydayTxtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/music_everyday"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/withHearMeNowLayoutId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/withHearMeNowLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/getStartedBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/withTxtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/with"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:layout_marginEnd="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/hearMeTxtId"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hearMeTxtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/hearme"
            android:textColor="@color/green"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/nowTxtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/now"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:layout_marginStart="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hearMeTxtId"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getStartedBtn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_get_started"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>